Intento de config SPA
